--- a/index.html
+++ b/index.html
@@ -3,9 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Morse Code Converter</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(to right, #00FFFF, #800080); /* Tyrkysová do purpurového gradientu */
+        }
+
+        .container {
+            text-align: center;
+            padding: 20px;
+            border-radius: 10px;
+            background-color: rgba(255, 255, 255, 0.8);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        input {
+            padding: 10px;
+            margin: 10px 0;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Morse Code Converter</h1>
+        <input type="text" id="inputText" placeholder="Zadejte text v Morseově abecedě">
+        <button onclick="convertMorse()">Převést</button>
+    </div>
+
+    <script>
+        function convertMorse() {
+            const inputText = document.getElementById('inputText').value.trim();
+
+            // Regulární výraz pro kontrolu, zda obsahuje pouze znaky Morseovy abecedy
+            const morseRegex = /^[.-\s]+$/;
+
+            if (morseRegex.test(inputText)) {
+                // Převod Morseovy abecedy na písmeno
+                const convertedText = morseToLetter(inputText);
+
+                // Zobrazit výsledek uživateli pomocí alertu
+                alert(`Převedený text: ${convertedText}`);
+            } else {
+                alert('Zadali jste neplatné znaky. Použijte pouze znaky Morseovy abecedy.');
+            }
+        }
+
+        function morseToLetter(morseCode) {
+            // Zde můžete implementovat logiku převodu Morseovy abecedy na písmeno
+            // (Můžete použít tabulku, slovník nebo jiný způsob mapování)
+
+            // Pro jednoduchost zde příklad mapování:
+            const morseToLetterMap = {
+                '.-': 'A',
+                '-...': 'B',
+                // další mapování
+            };
+
+            // Rozdělit Morseovu abecedu na jednotlivé znaky
+            const morseWords = morseCode.split(' ');
+
+            // Převod každého znaku Morseovy abecedy na písmeno
+            const convertedLetters = morseWords.map(word => morseToLetterMap[word]);
+
+            // Spojení písmen do výsledného textu
+            const convertedText = convertedLetters.join('');
+
+            return convertedText;
+        }
+    </script>
 </body>
 </html>
